Updates on README file and in *.xml files